--- a/frank/stylesheets/scss/modules/_buttons.scss
+++ b/frank/stylesheets/scss/modules/_buttons.scss
@@ -1,5 +1,5 @@
 /*Buttons*/		
-.button {
+.button, input[type=submit] {
 	display: inline-block;
 	background: $color-light;
 	color: $color-midtone;
