--- a/stylesheets/scss/partials/_grid.scss
+++ b/stylesheets/scss/partials/_grid.scss
@@ -130,9 +130,11 @@
 	
 	/* Mobile */
 	@media only screen and (max-width: 767px) {		
-		body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
-		.container { min-width: 0; margin-left: 0; margin-right: 0; }
-		.row { width: 100%; min-width: 0; margin-left: 0; margin-right: 0; }
+		body, .container, .row {
+			min-width: 0; margin-left: 0; margin-right: 0;
+		}
+		body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%;  padding-left: 0; padding-right: 0; }
+		.row { width: 100%; }
 		.row .row .column, .row .row .columns { padding: 0; }
 		.column, .columns { width: auto !important; float: none; margin-left: 0; margin-right: 0; }
 		.column:last-child, .columns:last-child { margin-right: 0; float: none; }
