--- a/frank/style.css
+++ b/frank/style.css
@@ -1000,7 +1000,15 @@ em {
 
 .wp-caption {
   text-align: center;
-  margin-top: 10px 0 15px 0;
+  border: 1px solid #ddd;
+  text-align: center;
+  background-color: #f3f3f3;
+  padding-top: 4px;
+  margin: 10px;
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
 .wp-caption img {
   margin: 0;
@@ -1011,7 +1019,7 @@ em {
 .wp-caption-text {
   font-size: 13px !important;
   color: #5d504f;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .gallery .gallery-caption {
