added typeplate to scss

--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -14,6 +14,7 @@ Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 @import "partials/extensions";
 @import "partials/reset";
 @import "partials/grid";
+@import "partials/typeplate";
 @import "partials/global";
 
 @import "modules/typography";
