Minor tweaks to CSS.

--- a/editor-style.css
+++ b/editor-style.css
@@ -894,7 +894,7 @@ dd {
 }
 .pagination a {
   margin-right: 40px;
-  min-width: 110px;
+  width: 110px;
 }
 .pagination.small {
   font: 13px Sans-Serif;
