--- a/style.css
+++ b/style.css
@@ -920,7 +920,7 @@ dd {
 }
 .pagination a {
   margin-right: 40px;
-  min-width: 110px;
+  width: 110px;
 }
 .pagination.small {
   font: 13px Sans-Serif;
@@ -1293,16 +1293,28 @@ textarea:focus {
 }
 
 #comment-form-content textarea {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   -webkit-transition: height 0.5s cubic-bezier(0.02, 0, 0.18, 1);
   -moz-transition: height 0.5s cubic-bezier(0.02, 0, 0.18, 1);
 }
 
 button, .button, input[type=submit] {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   -webkit-transition: background-color 0.5s cubic-bezier(0.02, 0, 0.18, 1);
   -moz-transition: background-color 0.5s cubic-bezier(0.02, 0, 0.18, 1);
 }
 
 #content.single .previous .arrow, #content.single .previous a {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   -webkit-transition: all 0.75s cubic-bezier(0.02, 0, 0.18, 1);
   -moz-transition: all 0.75s cubic-bezier(0.02, 0, 0.18, 1);
 }
