--- a/stylesheets/scss/partials/_global.scss
+++ b/stylesheets/scss/partials/_global.scss
@@ -1,9 +1,10 @@
 body {
-	font: 62.5%/1.6 $typeface-primary;
+	font: 10px/1.6 $typeface-primary;
 	background: $color-highlight;
 	color: $color-off-black;
 	height: 100%;
 	text-rendering: optimizelegibility;
+	-webkit-font-smoothing: antialiased;
 }
 
 /*Images*/
@@ -18,20 +19,14 @@ a {
 
 /* Titles */
 .title, .widget-title {
-	font: #{$font-weight-normal} #{$font-size-medium}/1.3 #{$typeface-secondary};
+	font-family: $typeface-secondary;
+	font-weight: $font-weight-normal;
 	a {
 		color: $color-midtone;
 		&:hover {
 			color: $color-dark;
 		}
 	}
-}
-
-.title.large {
-	font-size: $font-size-large;
-}
-.title.small {
-	font: $font-weight-bold #{$font-size-small}/1.25 #{$typeface-secondary};
 }
 
 /*Tables*/
@@ -63,9 +58,6 @@ dl {
 	padding:0;
 	font-family:$typeface-primary;
 }
-dt, dd {
-	font-size: $font-size-x-small;
-}
 dt {
 	font-weight: $font-weight-bold;
 	margin-top: $row-height;
@@ -91,7 +83,7 @@ dd {
 
 /*Pagination links*/
 .pagination {
-	font-size: font-size-small;
+	font-size: $font-size-small;
 	a {
 		margin-right: $gutter-width;
 		@include column-based-width(2, -20);
@@ -112,17 +104,12 @@ dd {
 	}
 }
 
-#content {
+.content {
 	margin: 0 0 $row-height*4 0;
 	position: relative;
 }
 
-#content-primary {
-	@extend .column;
-	width: $nine-columns;
-}
-
-#content.page .post img {
+.content.page .post img {
 	box-shadow: none !important;
 }
 
@@ -143,7 +130,7 @@ dd {
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
 
-	#content.single .post {
+	.content.single .post {
 		.flush-left {
 			margin-left: 0% !important;
 		}
