--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -7,15 +7,16 @@ Author URI:     http://somerandomdude.com/hello/
 Version:        0.9.2
 License:				GPL 3.0
 License URI:		http://www.gnu.org/copyleft/gpl.html
-Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
+Tags: 					brown, red, white, fixed-width, sticky-post, custom-menu
 */
 @import "partials/variables";
 @import "partials/mixins";
 @import "partials/extensions";
 @import "partials/reset";
 //@import "partials/grid";
-@import "partials/grid-new2";
+@import "partials/grid-new5";
 @import "partials/global";
+
 @import "modules/typography";
 @import "modules/buttons";
 @import "modules/metadata";
@@ -26,7 +27,6 @@ Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 @import "partials/transitions";
 @import "partials/header";
 @import "partials/posts";
-@import "partials/post-groups";
 @import "partials/single";
 @import "partials/page";
 @import "partials/attachment";
