Adding CSS modules to remove JS dependencies

--- a/stylesheets/scss/style-old.scss
+++ b/stylesheets/scss/style-old.scss
@@ -13,7 +13,7 @@ Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 @import "partials/mixins";
 @import "partials/extensions";
 @import "partials/reset";
-@import "partials/grid-new2";
+@import "partials/grid";
 @import "partials/global";
 @import "modules/typography";
 @import "modules/buttons";
