--- a/editor-style.css
+++ b/editor-style.css
@@ -365,413 +365,247 @@ table {
   border-spacing: 0;
 }
 
-/* Artfully Masterminded by ZURB */
-/* --------------------------------------------------
-	:: Grid
-	This is the mobile-friendly, responsive grid that
-	lets Foundation work much of its magic.
-	-------------------------------------------------- */
-.container {
-  padding: 0 20px;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-.row {
-  width: 100%;
-  max-width: 980px;
-  min-width: 727px;
-  margin: 0 auto;
+html,
+body {
+  font-size: 10px;
 }
 
-/* To fix the grid into a certain size, set max-width to width */
-.row .row {
-  min-width: 0;
-}
-
-.column, .columns {
-  margin-left: 4.4%;
-  float: left;
-  min-height: 1px;
-  position: relative;
-}
-
-.column:first-child, .columns:first-child {
-  margin-left: 0;
-}
-
-[class*="column"] + [class*="column"]:last-child {
-  float: right;
-}
-
-.row .one {
-  width: 4.3%;
-}
-
-.row .two {
-  width: 13%;
-}
-
-.row .three {
-  width: 21.679%;
-}
-
-.row .four {
-  width: 30.37%;
-}
-
-.row .five {
-  width: 39.1%;
-}
-
-.row .six {
-  width: 47.8%;
-}
-
-.row .seven {
-  width: 56.5%;
-}
-
-.row .eight {
-  width: 65.2%;
-}
-
-.row .nine {
-  width: 73.9%;
-}
-
-.row .ten {
-  width: 82.6%;
-}
-
-.row .eleven {
-  width: 91.3%;
-}
-
-.row .twelve {
-  width: 100%;
-}
-
-.row .offset-by-one {
-  margin-left: 13.1%;
-}
-
-.row .offset-by-two {
-  margin-left: 21.8%;
-}
-
-.row .offset-by-three {
-  margin-left: 30.5%;
-}
-
-.row .offset-by-four {
-  margin-left: 39.2%;
-}
-
-.row .offset-by-five {
-  margin-left: 47.9%;
-}
-
-.row .offset-by-six {
-  margin-left: 56.6%;
-}
-
-.row .offset-by-seven {
-  margin-left: 65.3%;
-}
-
-.row .offset-by-eight {
-  margin-left: 74.0%;
-}
-
-.row .offset-by-nine {
-  margin-left: 82.7%;
-}
-
-.row .offset-by-ten {
-  margin-left: 91.4%;
-}
-
-.row .centered {
-  float: none;
-  margin: 0 auto;
-}
-
-.row .offset-by-one:first-child {
-  margin-left: 8.7%;
-}
-
-.row .offset-by-two:first-child {
-  margin-left: 17.4%;
-}
-
-.row .offset-by-three:first-child {
-  margin-left: 26.1%;
-}
-
-.row .offset-by-four:first-child {
-  margin-left: 34.8%;
-}
-
-.row .offset-by-five:first-child {
-  margin-left: 43.5%;
-}
-
-.row .offset-by-six:first-child {
-  margin-left: 52.2%;
-}
-
-.row .offset-by-seven:first-child {
-  margin-left: 60.9%;
-}
-
-.row .offset-by-eight:first-child {
-  margin-left: 69.6%;
-}
-
-.row .offset-by-nine:first-child {
-  margin-left: 78.3%;
-}
-
-.row .offset-by-ten:first-child {
-  margin-left: 87%;
-}
-
-.row .offset-by-eleven:first-child {
-  margin-left: 95.7%;
-}
-
-/* Source Ordering */
-.push-two {
-  left: 17.4%;
-}
-
-.push-three {
-  left: 26.1%;
-}
-
-.push-four {
-  left: 34.8%;
-}
-
-.push-five {
-  left: 43.5%;
-}
-
-.push-six {
-  left: 52.2%;
-}
-
-.push-seven {
-  left: 60.9%;
-}
-
-.push-eight {
-  left: 69.6%;
-}
-
-.push-nine {
-  left: 78.3%;
-}
-
-.push-ten {
-  left: 87%;
-}
-
-.pull-two {
-  right: 17.4%;
-}
-
-.pull-three {
-  right: 26.1%;
-}
-
-.pull-four {
-  right: 34.8%;
-}
-
-.pull-five {
-  right: 43.5%;
-}
-
-.pull-six {
-  right: 52.2%;
-}
-
-.pull-seven {
-  right: 60.9%;
-}
-
-.pull-eight {
-  right: 69.6%;
-}
-
-.pull-nine {
-  right: 78.3%;
-}
-
-.pull-ten {
-  right: 87%;
-}
-
-img, video {
+img,
+object,
+embed {
   max-width: 100%;
   height: auto;
 }
 
-/* Nicolas Gallagher's micro clearfix */
-.row:before, .row:after, .clearfix:before, .clearfix:after {
+object,
+embed {
+  height: 100%;
+}
+
+img {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.clearfix:before, .clearfix:after {
   content: "";
   display: table;
 }
 
-.row:after, .clearfix:after {
+.clearfix:after {
   clear: both;
 }
 
-.row, .clearfix {
+.clearfix {
   zoom: 1;
 }
 
-/*	--------------------------------------------------
-	:: Block grids
-	These are 2-up, 3-up, 4-up and 5-up ULs, suited
-	for repeating blocks of content. Add 'mobile' to
-	them to switch them just like the layout grid
-	(one item per line) on phones
-
-	For IE7/8 compatibility block-grid items need to be
-	the same height. You can optionally uncomment the
-	lines below to support arbitrary height, but know
-	that IE7/8 do not support :nth-child.
-	-------------------------------------------------- */
-.block-grid {
-  display: block;
-  overflow: hidden;
+/* Grid HTML Classes */
+.row {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 98rem;
+  *zoom: 1;
 }
 
-.block-grid > li {
-  display: block;
-  height: auto;
+.row:before, .row:after {
+  content: " ";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.row .row {
+  width: auto;
+  margin-left: 2rem;
+  margin-right: -2rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: none;
+  *zoom: 1;
+}
+
+.row .row:before, .row .row:after {
+  content: " ";
+  display: table;
+}
+
+.row .row:after {
+  clear: both;
+}
+
+.column, .row [class*="span"] {
+  position: relative;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  /*width: 100%;*/
   float: left;
 }
 
-.block-grid.two-up {
-  margin-left: -4%;
+.push1, .push2, .push3, .push4, .push5, .push6, .push7, .push8, .push9, .push10, .push11 {
+  position: relative;
+  right: auto;
 }
 
-.block-grid.two-up > li {
-  margin-left: 4%;
-  width: 46%;
+.pull1, .pull2, .pull3, .pull4, .pull5, .pull6, .pull7, .pull8, .pull9, .pull10, .pull11 {
+  position: relative;
+  left: auto;
 }
 
-/* 	.block-grid.two-up>li:nth-child(2n+1) {clear: left;} */
-.block-grid.three-up {
-  margin-left: -2%;
+.span1 {
+  width: 8.33333%;
 }
 
-.block-grid.three-up > li {
-  margin-left: 2%;
-  width: 31.3%;
+.span2 {
+  width: 16.66667%;
 }
 
-/* 	.block-grid.three-up>li:nth-child(3n+1) {clear: left;} */
-.block-grid.four-up {
-  margin-left: -2%;
+.span3 {
+  width: 25%;
 }
 
-.block-grid.four-up > li {
-  margin-left: 2%;
-  width: 23%;
+.span4 {
+  width: 33.33333%;
 }
 
-/* 	.block-grid.four-up>li:nth-child(4n+1) {clear: left;} */
-.block-grid.five-up {
-  margin-left: -1.5%;
+.span5 {
+  width: 41.66667%;
 }
 
-.block-grid.five-up > li {
-  margin-left: 1.5%;
-  width: 18.5%;
+.span6 {
+  width: 50%;
 }
 
-/* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
-/* --------------------------------------------------
-	:: Grid
-	-------------------------------------------------- */
-/* Mobile */
-@media only screen and (max-width: 767px) {
-  body, .container, .row {
-    min-width: 0;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  body {
-    -webkit-text-size-adjust: none;
-    -ms-text-size-adjust: none;
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .row {
-    width: 100%;
-  }
-
-  .row .row .column, .row .row .columns {
-    padding: 0;
-  }
-
-  .column, .columns {
-    width: auto !important;
-    float: none;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .column:last-child, .columns:last-child {
-    margin-right: 0;
-    float: none;
-  }
-
-  [class*="column"] + [class*="column"]:last-child {
-    float: none;
-  }
-
-  [class*="column"]:before, [class*="column"]:after {
-    content: "";
-    display: table;
-  }
-
-  [class*="column"]:after {
-    clear: both;
-  }
-
-  .offset-by-one, .offset-by-two, .offset-by-three, .offset-by-four, .offset-by-five, .offset-by-six, .offset-by-seven, .offset-by-eight, .offset-by-nine, .offset-by-ten, .offset-by-eleven, .centered {
-    margin-left: 0 !important;
-  }
-
-  .push-two, .push-three, .push-four, .push-five, .push-six, .push-seven, .push-eight, .push-nine, .push-ten {
-    left: auto;
-  }
-
-  .pull-two, .pull-three, .pull-four, .pull-five, .pull-six, .pull-seven, .pull-eight, .pull-nine, .pull-ten {
-    right: auto;
-  }
+.span7 {
+  width: 58.33333%;
 }
-/* --------------------------------------------------
-	:: Block Grids
-	-------------------------------------------------- */
-@media only screen and (max-width: 767px) {
-  .block-grid.mobile {
-    margin-left: 0;
-  }
 
-  .block-grid.mobile > li {
-    float: none;
-    width: 100%;
-    margin-left: 0;
-  }
+.span8 {
+  width: 66.66667%;
 }
+
+.span9 {
+  width: 75%;
+}
+
+.span10 {
+  width: 83.33333%;
+}
+
+.span11 {
+  width: 91.66667%;
+}
+
+.span12 {
+  width: 100%;
+}
+
+.push1 {
+  left: 8.33333%;
+}
+
+.pull1 {
+  right: 8.33333%;
+}
+
+.push2 {
+  left: 16.66667%;
+}
+
+.pull2 {
+  right: 16.66667%;
+}
+
+.push3 {
+  left: 25%;
+}
+
+.pull3 {
+  right: 25%;
+}
+
+.push4 {
+  left: 33.33333%;
+}
+
+.pull4 {
+  right: 33.33333%;
+}
+
+.push5 {
+  left: 41.66667%;
+}
+
+.pull5 {
+  right: 41.66667%;
+}
+
+.push6 {
+  left: 50%;
+}
+
+.pull6 {
+  right: 50%;
+}
+
+.push7 {
+  left: 58.33333%;
+}
+
+.pull7 {
+  right: 58.33333%;
+}
+
+.push8 {
+  left: 66.66667%;
+}
+
+.pull8 {
+  right: 66.66667%;
+}
+
+.push9 {
+  left: 75%;
+}
+
+.pull9 {
+  right: 75%;
+}
+
+.push10 {
+  left: 83.33333%;
+}
+
+.pull10 {
+  right: 83.33333%;
+}
+
+.push11 {
+  left: 91.66667%;
+}
+
+.pull11 {
+  right: 91.66667%;
+}
+
+.column-centered {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  float: none !important;
+}
+
 html .mceContentBody {
   max-width: 535px;
   font: 2.1rem/1.6 Georgia, serif;
