--- a/style-old.css
+++ b/style-old.css
@@ -9,13 +9,7 @@ License:				GPL 3.0
 License URI:		http://www.gnu.org/copyleft/gpl.html
 Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 */
-.row:after, .clearfix:after, .menu:after, .post-content p:after, .comment-content:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-body, .metadata, .metadata li, .wp-caption img, .menu-item, .sub-menu, .comments .comment {
+body, .metadata, .metadata li, .wp-caption img, .menu-item, .sub-menu, .comments-list .comment {
   margin: 0;
   padding: 0;
 }
@@ -46,11 +40,11 @@ table, .alignleft, .alignright, .aligncenter, .wp-caption, .single .post-content
   margin: 1.5rem 0;
 }
 
-.no_comments, .comments_closed, .comments .children .comment {
+.no_comments, .comments_closed, .comments-list .children .comment {
   margin: 3rem 0;
 }
 
-.post, .type-page, .comments .comment:not(:first-child) {
+.post, .type-page, .comments-list .comment:not(:first-child) {
   margin: 6rem 0;
 }
 
@@ -404,321 +398,247 @@ table {
   border-spacing: 0;
 }
 
-/* Artfully Masterminded by ZURB */
-/* --------------------------------------------------
-	:: Grid
-	This is the mobile-friendly, responsive grid that
-	lets Foundation work much of its magic.
-	-------------------------------------------------- */
-.container {
-  padding: 0 20px;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
+html,
+body {
+  font-size: 10px;
+}
+
+img,
+object,
+embed {
+  max-width: 100%;
+  height: auto;
+}
+
+object,
+embed {
+  height: 100%;
+}
+
+img {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.clearfix:before, .menu:before, .post-content p:before, .comment-content:before, .clearfix:after, .menu:after, .post-content p:after, .comment-content:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after, .menu:after, .post-content p:after, .comment-content:after {
+  clear: both;
+}
+
+.clearfix, .menu, .post-content p, .comment-content {
+  zoom: 1;
+}
+
+/* Grid HTML Classes */
 .row {
   width: 100%;
-  max-width: 980px;
-  min-width: 727px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 98rem;
+  *zoom: 1;
 }
 
-/* To fix the grid into a certain size, set max-width to width */
+.row:before, .row:after {
+  content: " ";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
 .row .row {
-  min-width: 0;
+  width: auto;
+  margin-left: 2rem;
+  margin-right: -2rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: none;
+  *zoom: 1;
 }
 
-.column, .post .post-content, .type-page .post-content, .post .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .row [class*="span"] {
-  margin-left: 4.4%;
-  float: left;
-  min-height: 1px;
+.row .row:before, .row .row:after {
+  content: " ";
+  display: table;
+}
+
+.row .row:after {
+  clear: both;
+}
+
+.column, .row [class*="span"], .post .post-content, .type-page .post-content, .post .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags {
   position: relative;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  /*width: 100%;*/
+  float: left;
 }
 
-.column:first-child, .post .post-content:first-child, .type-page .post-content:first-child, .post .post-info:first-child, .type-page .post-info:first-child, #comment-form-logged-in-as:first-child, #comment-form-info:first-child, #comment-form-content:first-child, .comment-content:first-child, .comment-info:first-child, #comment-form-allowed-tags:first-child, .row [class*="span"]:first-child {
-  margin-left: 0;
+.push1, .push2, .post .post-content, .type-page .post-content, .comment-content, #comment-form-allowed-tags, .push3, #respond #submit, .push4, .push5, .push6, .push7, .push8, .push9, .push10, .push11 {
+  position: relative;
+  right: auto;
 }
 
-/*TODO: Make span widths & margins more precise so this rule isn't needed*/
-[class*="column"] + [class*="column"]:last-child, .column:last-child, .post .post-content:last-child, .type-page .post-content:last-child, .post .post-info:last-child, .type-page .post-info:last-child, #comment-form-logged-in-as:last-child, #comment-form-info:last-child, #comment-form-content:last-child, .comment-content:last-child, .comment-info:last-child, #comment-form-allowed-tags:last-child {
-  float: right;
+.pull1, .pull2, .pull3, .pull4, .pull5, .pull6, .pull7, .pull8, .post .post-info, .type-page .post-info, .comment-info, .pull9, .pull10, .pull11 {
+  position: relative;
+  left: auto;
 }
 
 .span1 {
-  width: 4.3%;
+  width: 8.33333%;
 }
 
 .span2, .post .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, .comment-info {
-  width: 13%;
+  width: 16.66667%;
 }
 
 .span3 {
-  width: 21.679%;
+  width: 25%;
 }
 
 .span4 {
-  width: 30.37%;
+  width: 33.33333%;
 }
 
 .span5 {
-  width: 39.1%;
+  width: 41.66667%;
 }
 
 .span6 {
-  width: 47.8%;
+  width: 50%;
 }
 
 .span7 {
-  width: 56.5%;
+  width: 58.33333%;
 }
 
 .span8, .post .post-content, .type-page .post-content, #comment-form-content, .comment-content, #comment-form-allowed-tags {
-  width: 65.2%;
+  width: 66.66667%;
 }
 
 .span9 {
-  width: 73.9%;
+  width: 75%;
 }
 
 .span10 {
-  width: 82.6%;
+  width: 83.33333%;
 }
 
 .span11 {
-  width: 91.3%;
+  width: 91.66667%;
 }
 
 .span12 {
   width: 100%;
 }
 
-.offset1 {
-  margin-left: 13.1%;
+.push1 {
+  left: 8.33333%;
 }
 
-.offset2 {
-  margin-left: 21.8%;
+.pull1 {
+  right: 8.33333%;
 }
 
-.offset3 {
-  margin-left: 30.5%;
-}
-
-.offset4 {
-  margin-left: 39.2%;
-}
-
-.offset5 {
-  margin-left: 47.9%;
-}
-
-.offset6 {
-  margin-left: 56.6%;
-}
-
-.offset7 {
-  margin-left: 65.3%;
-}
-
-.offset8 {
-  margin-left: 74.0%;
-}
-
-.offset9 {
-  margin-left: 82.7%;
-}
-
-.offset10 {
-  margin-left: 91.4%;
-}
-
-.row .centered {
-  float: none;
-  margin: 0 auto;
-}
-
-.offset1:first-child {
-  margin-left: 8.7%;
-}
-
-.offset2:first-child {
-  margin-left: 17.4%;
-}
-
-.offset3:first-child {
-  margin-left: 26.1%;
-}
-
-.offset4:first-child {
-  margin-left: 34.8%;
-}
-
-.offset5:first-child {
-  margin-left: 43.5%;
-}
-
-.offset6:first-child {
-  margin-left: 52.2%;
-}
-
-.offset7:first-child {
-  margin-left: 60.9%;
-}
-
-.offset8:first-child {
-  margin-left: 69.6%;
-}
-
-.offset9:first-child {
-  margin-left: 78.3%;
-}
-
-.offset10:first-child {
-  margin-left: 87%;
-}
-
-.offset11:first-child {
-  margin-left: 95.7%;
-}
-
-/* Source Ordering */
 .push2, .post .post-content, .type-page .post-content, .comment-content, #comment-form-allowed-tags {
-  left: 17.4%;
-}
-
-.push3, #respond #submit {
-  left: 26.1%;
-}
-
-.push4 {
-  left: 34.8%;
-}
-
-.push5 {
-  left: 43.5%;
-}
-
-.push6 {
-  left: 52.2%;
-}
-
-.push7 {
-  left: 60.9%;
-}
-
-.push8 {
-  left: 69.6%;
-}
-
-.push9 {
-  left: 78.3%;
-}
-
-.push10 {
-  left: 87%;
+  left: 16.66667%;
 }
 
 .pull2 {
-  right: 17.4%;
+  right: 16.66667%;
+}
+
+.push3, #respond #submit {
+  left: 25%;
 }
 
 .pull3 {
-  right: 26.1%;
+  right: 25%;
+}
+
+.push4 {
+  left: 33.33333%;
 }
 
 .pull4 {
-  right: 34.8%;
+  right: 33.33333%;
+}
+
+.push5 {
+  left: 41.66667%;
 }
 
 .pull5 {
-  right: 43.5%;
+  right: 41.66667%;
+}
+
+.push6 {
+  left: 50%;
 }
 
 .pull6 {
-  right: 52.2%;
+  right: 50%;
+}
+
+.push7 {
+  left: 58.33333%;
 }
 
 .pull7 {
-  right: 60.9%;
+  right: 58.33333%;
+}
+
+.push8 {
+  left: 66.66667%;
 }
 
 .pull8, .post .post-info, .type-page .post-info, .comment-info {
-  right: 69.6%;
+  right: 66.66667%;
+}
+
+.push9 {
+  left: 75%;
 }
 
 .pull9 {
-  right: 78.3%;
+  right: 75%;
+}
+
+.push10 {
+  left: 83.33333%;
 }
 
 .pull10 {
-  right: 87%;
+  right: 83.33333%;
 }
 
-img, video {
-  max-width: 100%;
-  height: auto;
+.push11 {
+  left: 91.66667%;
 }
 
-/* Nicolas Gallagher's micro clearfix */
-/* --------------------------------------------------
-	:: Grid
-	-------------------------------------------------- */
-/* Mobile */
-@media only screen and (max-width: 767px) {
-  body, .container, .row {
-    min-width: 0;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  body {
-    -webkit-text-size-adjust: none;
-    -ms-text-size-adjust: none;
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .row {
-    width: 100%;
-  }
-
-  .row .row [class*="span"] {
-    padding: 0;
-  }
-
-  .column, .post .post-content, .type-page .post-content, .post .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .row [class*="span"] {
-    width: auto !important;
-    float: none;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .column:last-child, .post .post-content:last-child, .type-page .post-content:last-child, .post .post-info:last-child, .type-page .post-info:last-child, #comment-form-logged-in-as:last-child, #comment-form-info:last-child, #comment-form-content:last-child, .comment-content:last-child, .comment-info:last-child, #comment-form-allowed-tags:last-child, .row [class*="span"]:last-child {
-    margin-right: 0;
-    float: none;
-  }
-
-  .row [class*="span"] + .row [class*="span"]:last-child {
-    float: none;
-  }
-
-  .row [class*="span"]:after, .column:after, .post .post-content:after, .type-page .post-content:after, .post .post-info:after, .type-page .post-info:after, #comment-form-logged-in-as:after, #comment-form-info:after, #comment-form-content:after, .comment-content:after, .comment-info:after, #comment-form-allowed-tags:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  .offset1, .offset2, .offset3, .offset4, .offset5, .offset6, .offset7, .offset8, .offset9, .offset10, .offset11, .centered {
-    margin-left: 0 !important;
-  }
-
-  .push2, .post .post-content, .type-page .post-content, .comment-content, #comment-form-allowed-tags, .push3, #respond #submit, .push4, .push5, .push6, .push7, .push8, .push9, .push10 {
-    left: auto;
-  }
-
-  .pull2, .pull3, .pull4, .pull5, .pull6, .pull7, .pull8, .post .post-info, .type-page .post-info, .comment-info, .pull9, .pull10 {
-    right: auto;
-  }
+.pull11 {
+  right: 91.66667%;
 }
+
+.column-centered {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  float: none !important;
+}
+
 body {
   font: 10px/1.6 Georgia, serif;
   background: #fffefe;
@@ -816,7 +736,7 @@ dd {
   overflow: hidden;
 }
 
-.truncate, .widget-title, .comments .metadata .date {
+.truncate, .widget-title, .comments-list .metadata .date {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1535,28 +1455,28 @@ button, .button, input[type=submit] {
   font: 700 1.3rem Sans-Serif;
 }
 
-.comments {
+.comments-list {
   list-style: none;
   padding-left: 0;
   margin-left: 0;
 }
-.comments .comment.parent {
+.comments-list .comment.parent {
   /*TODO: Figure out a visual style for this*/
 }
-.comments .metadata {
+.comments-list .metadata {
   font-size: 1.1rem;
 }
-.comments .comment:last-child {
+.comments-list .comment:last-child {
   margin-bottom: 0;
 }
-.comments .comment.bypostauthor {
+.comments-list .comment.bypostauthor {
   padding: 3rem 0;
 }
-.comments .comment-edit-link {
+.comments-list .comment-edit-link {
   font-weight: 700;
   color: #ea0000;
 }
-.comments .children {
+.comments-list .children {
   /*TODO: Figure out a visual style for this*/
   margin-left: 0;
   list-style: none;
