--- a/stylesheets/scss/modules/_buttons.scss
+++ b/stylesheets/scss/modules/_buttons.scss
@@ -5,7 +5,7 @@
 	color: $color-midtone;
 	padding: 8px 10px;
 	border-radius: 2px;
-	font: #{$font-weight-bold} #{$font-size-small} #{$typeface-secondary};
+	font: #{$font-weight-bold} #{$font-size-x-small} #{$typeface-secondary};
 	text-align: center;
 	border: 1px solid rgba(18, 7, 6, 0.2);
 	&:hover {
@@ -15,7 +15,7 @@
 	}
 }
 
-.button.alt {
+.button-alt {
 	background: $color-accent;
 	color: $color-highlight;
 	&:hover {
@@ -24,7 +24,7 @@
 	}
 }
 
-.button.small {
+.button-small {
 	font-size: $font-size-xx-small;
 	padding: 4px 8px;
 }
