--- a/stylesheets/scss/partials/_posts.scss
+++ b/stylesheets/scss/partials/_posts.scss
@@ -6,6 +6,10 @@
 	font: #{$font-size-small}/1.6 #{$typeface-primary};
 }
 
+.post + .post, .type-page + .type-page {
+	@extend %vertical-margin-x4;
+}
+
 .post-content {
 	p, li, dt, dd, blockquote {
 		font-size: 1em;
@@ -14,7 +18,6 @@
 		font-size: $font-size-small;
 	}
 	img {
-		max-width: 100%;
 		@extend %default-shadow;
 	}
 	p {
@@ -22,73 +25,37 @@
 	}
 }
 
-.post, .type-page {
-	@extend %vertical-margin-x4;
-	&:first-child {
-		margin-top: 0;
-	}
-	&:last-child {
-		margin-bottom: 0;
-	}
+.post-info {
+	opacity:.33;
+}
+
+.post:not(.post-large), .type-page {
 	.post-content {
 		@extend .column;
 		@extend .span8;
 		@extend .push2;
 	}
 	.post-info {
-		opacity:.33;
 		@extend .column;
 		@extend .span2;
 		@extend .pull8;
 	}
 }
 
-
-
-.post-group-header {
-	margin-bottom:$row-height*2;
-	padding-bottom:5px;
-	border-bottom: 1px $color-light solid;
-	@extend %small-label;
-	.label {
-		font-weight: $font-weight-bold;
-	}
-	.caption {
-		font-style: italic;
-		color:$color-midtone;
-		margin:0 10px;
-	}
-	.more {
-		font-family: $typeface-primary; }
-	}
-.post-group {
-	margin-top:0;
-	margin-bottom:$row-height*4;
-	& ~ .post-group {
-		margin: $row-height*4 auto;
-	}
-	.read-more {
-		margin-top: $row-height;
-		.more {
-			font-size: $font-size-x-small;
-		}
-	}
-}
-.post-group.oneup.large {
-	section {
+.post-large {
+	.post-content {
 		margin: 0 0 $row-height 0;
-		p {
-			font-style: italic;
-			font-size: $font-size-xxx-large;
-		}
+	}
+	p {
+		font-style: italic;
+		font-size: $font-size-xx-large;
+		margin: 0 0 $row-height;
 	}
 }
-
-
 
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
-	#content.home .post-group.oneup.large .post-content p {
+	.post-large p {
 		font-size: $font-size-x-large;
 	}
 }
