--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -29,13 +29,11 @@ Tags: 					brown, red, white, fixed-width, sticky-post, custom-menu
 @import "partials/single";
 @import "partials/page";
 @import "partials/attachment";
-@import "partials/archive";
 @import "partials/fourohfour";
-@import "partials/sidebar";
 @import "partials/comments";
 @import "partials/footer";
 
-@import "gallery/gallery.build.scss";
-@import "gallery/gallery.theme.scss";
+//@import "gallery/gallery.build.scss";
+//@import "gallery/gallery.theme.scss";
 
-@import "modal/modal.scss";
+//@import "modal/modal.scss";
